--- a/insta485/templates/delete.html
+++ b/insta485/templates/delete.html
@@ -3,7 +3,8 @@
 
 {% block context %} 
 <!-- DO NOT CHANGE THIS -->
-<form action="<FIXME_ACCOUNTS_URL_HERE>?target=<FIXME_ACCOUNTS_CREATE_HERE>" method="post" enctype="multipart/form-data">
+<p>{{session['username']}}</p>
+<form action="/accounts/delete/?target=/" method="post" enctype="multipart/form-data">
     <input type="submit" name="delete" value="confirm delete account"/>
     <input type="hidden" name="operation" value="delete"/>
   </form>
